--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		
-		<link rel="stylesheet" type="text/css" href="StyleSheet.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Black+Ops+One&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 		
 			<h1 class="h1"> Immigation Social Injustice <h1>
 		
-		<a href="Home.html"> <button class="button button1"> Home </button> </a>
+		<a href="index.html"> <button class="button button1"> Home </button> </a>
 		<a href="Campaign.html"> <button class="button button2"> Our Campaign </button> </a>
 		<a href="SocialJustice.html"> <button class="button button3"> Social Justice </button> </a>
 		<a href="Environmental.html"> <button class="button button4"> Environmental Data </button> </a>
@@ -60,7 +60,7 @@
 		
 			<div class="box e" background="light-grey-terrazzo.png"> 
 	
-		<a href="Home.html"> <button class="button button1"> Home </button> </a>
+		<a href="index.html"> <button class="button button1"> Home </button> </a>
 		<a href="Campaign.html"> <button class="button button2"> Our Campaign </button> </a>
 		<a href="SocialJustice.html"> <button class="button button3"> Social Justice </button> </a>
 		<a href="Environmental.html"> <button class="button button4"> Environmental Data </button> </a>
