--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 	<head>
+		<title> Home </title>
 		
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Black+Ops+One&display=swap" rel="stylesheet">
