--- a/Environmental.html
+++ b/Environmental.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		
+		<title> Environmental Data </title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		
 		<link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
