--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			
 			<p class="p"> The ISI is an international campaign working towards providing more awarness to unethical and mistreatment of immigrants across America. We look towards providing correct informatoin and stopping misinformation from taking control of the mases. Here at ISI we are fighting for basic human rights of these immigrants, legal or not, it shouldn't matter. 
 			<br></br>
-			If you want to look at more inforamtion regarding immigration, why it happens, what is being done, and where it takes place, or more on what our campaign is about, feel free to take a lool at the links about.
+			If you want to look at more inforamtion regarding immigration, why it happens, what is being done, and where it takes place, or more on what our campaign is about, feel free to take a look at the links I pitched in! Here is my <a href="https://docs.google.com/document/d/1vJ5fQ_tZp-rJIU0IbP9Txo3krzf1HBtdl4Wyyi8h4C4/edit?usp=sharing"> work sited link! </a>
 			</p> 
 
 		</div>
