--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   
     <div class="numbertext">2 / 3</div>
     <img src="https://www.washingtonpost.com/resizer/nEk40dbV8eicra48nkYaCRNBNFM=/767x0/smart/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/2RUVK4V5QMI6TKFQP3MKBVO4LU.jpg" style="width:100%">
-    <div class="text">Children of mainly Latino immigrant parents hold signs during a march to the Madison County Courthouse in Canton, Miss.</div>
+    <div class="text">Children of Latino immigrant parents hold signs during a march to the Madison County Courthouse in Canton, Miss.</div>
  
  </div>
 
